# BIMAgent

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  ROUTING.md  Readme.md  TASKS.md  config.py  docker-compose.yml  ingest.py  main.py  models.py  orchestrator.py  pyproject.toml  requirements.txt  store.py
.github/workflows/: ci.yml
app/: main.py
app/agents/: crag_grader.py  generator.py
app/api/routers/: chat.py
app/orchestrator/: graph.py
app/orchestrator/nodes/: router.py
app/retrieval/: compression.py  fusion.py
data/code/: calculator.py
data/resumes/: alice_resume.md
skills/: __init__.py  base.py  example_skill.py  extract_bimextract.py  loader.py  middleware.py  search_bimindex.py  session.py  skillgraph.py
tests/: test_crag.py  test_deps.py  test_qdrant.py  test_router.py  test_rrf.py  test_streaming.py
