[project]
name = "bimagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "langchain>=1.3.10",
    "langchain-core>=0.3.23",
    "langchain-text-splitters",
    "langchain-openai>=1.3.2",
    "langchain-qdrant",
    "qdrant-client",
    "pydantic>=2.13.4",
    "pydantic-settings",
    "python-dotenv",
    "pypdf",
    "pytest>=8.0.0",
    "langgraph>=1.2.6",
    "uvicorn>=0.49.0",
]
