[project]
name = "bimagent"
version = "0.1.0"
description = "BIMAgent — Tri-Modal RAG orchestration hub"
readme = "Readme.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.137.2",
    "langchain>=1.3.10",
    "langchain-core>=0.3.23",
    "langchain-text-splitters",
    "langchain-openai>=1.3.2",
    "langchain-qdrant",
    "qdrant-client",
    "pydantic>=2.13.4",
    "pydantic-settings",
    "python-dotenv",
    "pypdf",
    "langgraph>=1.2.6",
    "uvicorn>=0.49.0",
    "llama-parse>=0.5",
    "docling>=2.0",
    "google-antigravity",
    "httpx>=0.27.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "skills*"]
exclude = ["data*", "assets*", "qdrant_local*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
